# internal/app/models/books.go
@@ -8,10 +8,9 @@ import (
 
 // Book struct to describe book object.
 type Book struct {
-	ID         uuid.UUID `db:"id" json:"id" validate:"required,uuid"`
-	CreatedAt  time.Time `db:"created_at" json:"created_at"`
-	UpdatedAt  time.Time `db:"updated_at" json:"updated_at"`
-	Title      string    `db:"title" json:"title" validate:"required,lte=255"`
-	Author     string    `db:"author" json:"author" validate:"required,lte=255"`
-	BookStatus int       `db:"book_status" json:"book_status" validate:"required,len=1"`
+	ID        uuid.UUID `db:"id" json:"id" validate:"required,uuid"`
+	CreatedAt time.Time `db:"created_at" json:"created_at"`
+	UpdatedAt time.Time `db:"updated_at" json:"updated_at"`
+	Title     string    `db:"title" json:"title" validate:"required,lte=255"`
+	Author    string    `db:"author" json:"author" validate:"required,lte=255"`
 }
